Fix spacing issues

--- a/src/views/About/About.css
+++ b/src/views/About/About.css
@@ -8,7 +8,7 @@ nav {
 }
 
 .about-text {
-  margin: 10%;
+  margin: 5%;
   background: white;
   padding: 5%;
 }
